# KanLang

./: .gitignore  CMakeLists.txt  README.md  main.cpp
kan/: bytebuffer.hpp  compiler.cpp  compiler.hpp  containers.hpp  easy.hpp  iterator.hpp  kan_semantic.cpp  kan_semantic.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  semantic.cpp  semantic.hpp  traceback.cpp  traceback.hpp  types.cpp  types.h  types.hpp
kan/executor/: bytecode_def.h  compiler.cpp  compiler.hpp  executor.cpp  executor.hpp  statements_class.cpp  statements_class.hpp  stmt_parser.hpp
kan/executor/types/: allocator.hpp  integer.hpp  types.cpp  types.hpp
kan/executor/types/std/: types.hpp
kan/vm/: allocator.hpp  mem_allocator.hpp  scope.cpp  scope.hpp  smart_allocator.hpp  stack.h  type.cpp  type.hpp  vm.cpp  vm.hpp
kan/vm/std/: bool.hpp  bytebuffer.hpp  function.hpp  function_obj.hpp  initialiser.hpp  int.hpp  list.hpp  list_obj.hpp  none.hpp  string.hpp  type.hpp  user_function.hpp  user_obj.hpp
kanvm_doc/: ru.md
